# LabTrackerBack

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt  test_main.http
api/: endpoints.py  handlers.py
auth/: auth.py  database.py  manager.py  schemas.py
db/: dal.py  models.py  session.py
migrations/: env.py
migrations/versions/: 2023-07-12_add_fk_for_new_models.py  2023-07-12_add_new_main_models.py  2023-07-13_try_to_add_realtions.py  2023-07-15_add_status_field_in_task_model.py  2023-07-15_change_not_null_status.py  2023-07-15_change_not_null_status2.py  2023-07-15_change_on_delete_option.py  2023-07-18_add_tasks_count_to_subject_model.py  2023-07-18_remove_tasks_count_for_subject_model.py  2023-07-19_change_default_value_to_prio.py  266d55761105_first_normal_migration_after_reinit.py  2aa6ad3f80f2_try_to_add_table.py  30d759987d81_try_to_add_table.py  33089b483a0b_first_migration_after_reinit.py  415c57e4d149_add_user_table_again.py  46974c081e4e_database_tablecreation.py  721a8899a51c_first_full_normal_migration_after_reinit.py  7d455f9202a9_rename_and_refactor_user_model.py  8c720d9aa248_rename_users_table.py  9649489b7c4a_rename_and_refactor_user_model.py  a286e744d64f_databasecreation.py  ab4f3c3eac06_try_to_add_table.py  abef9702fd64_rename_and_refactor_user_model.py
models/: models.py
src/: config.py  database.py  exceptions.py  main.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/tracker/: dependencies.py  exceptions.py  models.py  router.py  utils.py  (+2 more)
